Changes for 1.1beta6:

 - fix crash in processing of autoregistration (Alexei)
 - added validate.inc.php (Alexei)
 - minor fix for schema of table 'rights' (Alexei)
 - fixed trigger linkage form (Alexei)
 - possibly fixed processing of SNMP Counter32 metrics (Alexei)
 - added HTML classes into PHP framework (Eugene)
 - new trigger functions: logseverity and logsource (Alexei)
 - Overview screen won't show disabled triggers (Alexei)
 - support of macro {TRIGGER.KEY} (Alexei)
 - fixed error when deleting a trigger (Alexei)
 - new popup selections for forms (Alexei)
 - fixed rare server crash when processing log[<path>] (Alexei)
 - fix for compilation issues of SNMP support (Alexei)
 - fix of processing of item's multiplier (Alexei)

Changes for 1.1beta5:

 - improved proc.num for Tru64, added parameter 'comm' (Eugene)
 - fixed span handling for screens (Alexei)
 - dropped original spancheck patch. No more warnings. (Alexei)
 - screens and actions will not be under control of templates (Alexei)
 - minor fix for enabling recovered hosts (Alexei)
 - new trigger function: regexp (Alexei)
 - support of function str() for item type 'log' (Alexei)
 - terminology change: trigger's 'description' -> 'name' (Alexei)
 - new macro for actions {TRIGGER.NAME} (Alexei)
 - added Graphs synchronization for linked hosts (Eugene)
 - fixed processing of Delta (Alexei)
 - minor fixes for SNMP handling (Alexei)
 - make possible combination of FLOAT and UINT history in a graph (Alexei)
 - use english translation if cannot find local phrase (Alexei)
 - added Chinese translation. (Alexei)
 - updated German translation. Thanks to Julian. (Alexei)
 - fixed processing of icmpping and icmppingsec (Alexei)
 - seperartion of LDFLAGS and LIBS in all Makefile.am (Alexei)
 - fixed MySQL-related configuration and making issues (Alexei)
 - fixed incorrect handling of retrieved values in zabbix_get (Alexei)
 - fixed processing of simple checks (Alexei)